# Agentic-Jewelry-Intelligence-Framework

./: .dockerignore  .env.template  .gitignore  Dockerfile  Jewelry_Intelligence_API.postman_collection.json  Makefile  README.md  alembic.ini  check_requirements.py  docker-compose.yml  example_usage.py  pyproject.toml  requirements.txt  run.py  setup.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: __init__.py  config.py  database.py  main.py
app/agents/: __init__.py  crawler.py  extractor.py  inference.py  normalizer.py  orchestrator.py  storage.py  summarizer.py
app/api/: __init__.py  filters.py  jewels.py  scrape.py  status.py
app/models/: __init__.py  base.py  jewel.py  job.py
app/schemas/: __init__.py  jewel.py  job.py
app/utils/: __init__.py  email.py
tests/: __init__.py  test_normalizer.py
